# tau_chrome

./: README.md  ffigen.yaml
android/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/linux/: my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugins.cmake
ios/Classes/: webaudio.c
src/: CMakeLists.txt  tau_chrome.c  tau_chrome.h  tau_chrome_helper.h
tau_chrome/: README.md  ffigen.yaml
tau_chrome.sav/: pubspec.yaml
tau_chrome.sav/android/src/main/: AndroidManifest.xml
tau_chrome.sav/example/: README.md
tau_chrome.sav/example/android/app/: build.gradle
tau_chrome.sav/example/android/app/src/main/: AndroidManifest.xml
tau_chrome.sav/example/macos/Runner/Configs/: AppInfo.xcconfig
tau_chrome.sav/example/windows/: CMakeLists.txt
tau_chrome.sav/example/windows/runner/: Runner.rc  main.cpp
tau_chrome.sav/lib/: tau_chrome.dart  tau_chrome_bindings_generated.dart
tau_chrome.sav/linux/: CMakeLists.txt
tau_chrome.sav/macos/: tau_chrome.podspec
tau_chrome.sav/macos/Classes/: tau_chrome.c
tau_chrome/android/: settings.gradle
tau_chrome/example/: pubspec.yaml
tau_chrome/example/ios/Runner.xcodeproj/: project.pbxproj
tau_chrome/example/lib/: main.dart
tau_chrome/example/linux/: CMakeLists.txt
tau_chrome/ios/: tau_chrome.podspec
tau_chrome/src/: CMakeLists.txt  tau_chrome.c  tau_chrome.h
windows/: CMakeLists.txt
(+2 files in other folders)
